initilized project with framer and smoth scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,9 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #111015;
+  --foreground: #ffffff;
+  --brand: #FF8C00;
 }
 
 @media (prefers-color-scheme: dark) {
